@@ -2,6 +2,8 @@
 ----
 - httpslib.ProxyHTTPSConnection now sends the required Host header,
   by Karl Grindley
+- Use the proxied User-Agent value in CONNECT requests, by James Antill and
+  Miloslav Trmac
 - m2.pkey_write_pem[_no_cipher] changed to use the recommended (more secure)
   PEM_write_bio_PKCS8PrivateKey (used be PEM_write_bio_PrivateKey).
 - X509.load_cert, load_cert_bio, load_cert_der_string, new_stack_from_der,
